added some text

--- a/training/09_first_ticket.Rmd
+++ b/training/09_first_ticket.Rmd
@@ -12,7 +12,9 @@ Before opening a R script first look over the initial checklist first to identif
 
 ## Processing templates
 
-We have developed some partially filled R scripts to get you started on working on your first dataset. You can use this template where you can [fill in the blanks](data/dataset_processing_example_blanks.R) to get familiar with the functions we use and workflow at first. We also have a more minimal example [A filled example](dadataset_processing_example_skeleton.R_.R) as a intermediate step. You can look at the [filled example](data/dataset_processing_example_filled.R) if you get stuck or message the #datateam.
+We have developed some partially filled R scripts to get you started on working on your first dataset. They outline common functions used in processing a dataset. However, it will differ depending on the dataset.
+
+You can use this template where you can [fill in the blanks](data/dataset_processing_example_blanks.R) to get familiar with the functions we use and workflow at first. We also have a more minimal example [A filled example](dadataset_processing_example_skeleton.R_.R) as a intermediate step. You can look at the [filled example](data/dataset_processing_example_filled.R) if you get stuck or message the #datateam.
 
 Once you have updated the dataset to your satisfaction and reviewed the Final Checklist, post the link to the dataset on #datateam for peer review.
 
