--- a/training/01_introduction.Rmd
+++ b/training/01_introduction.Rmd
@@ -1,6 +1,6 @@
 # Introduction to open science
 
-These materials are meant to introduce you to the principles of open science, effective data management, and data archival with the DataONE data repository. It also provides an overview on the tools we will be using (remote servers, Rstudio, R, Troubleshooting, Exercises) throughout the training.
+These materials are meant to introduce you to the principles of open science, effective data management, and data archival with the DataONE data repository. It also provides an overview on the tools we will be using (remote servers, Rstudio, R, Troubleshooting, Exercises) throughout the training. This document is meant to take multiple days to complete depending on your previous knowledge on some of the topics. 
 
 If you see anything that needs fixing, submit a issue in the 
 <a href = 'https://github.com/NCEAS/datateam-training/issues' target='_blank'> github issues </a>
