--- a/training/01_introduction.Rmd
+++ b/training/01_introduction.Rmd
@@ -101,7 +101,7 @@ The rest of the training has a series of exercises. These are meant to take you 
 Please note that you will be completing everything on the  <a href = 'test.arcticdata.io' target='_blank'> site for the training. In the future if you are unsure about doing anything with a dataset. The test site is a good place to try things out!
 
 ## Exercise 1 {.exercise}
-This part of the exercise walks you through submitting data through the web form on test.arctic.io
+This part of the exercise walks you through submitting data through the web form on "<a href = 'https://test.arcticdata.io' target='_blank'>test.arcticdata.io</a>"
 
 ### Part 1
 * Download the [csv](data/Loranty_2016_Environ._Res._Lett._11_095008.csv) of Table 1 from <a href = 'http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta' target='_blank'>this paper.</a>
@@ -113,3 +113,4 @@ This part of the exercise walks you through submitting data through the web form
     + for the purposes of this training exercise, not every single author needs to be listed with full contact details, listing the first two authors is fine,
     + directly copying and pasting sections from the paper (abstract, methods, etc.) is also fine,
     + attributes (column names) should be defined, including correct units and missing value codes.
+    + submit the dataset
