--- a/training/02_creating_a_data_package.Rmd
+++ b/training/02_creating_a_data_package.Rmd
@@ -86,21 +86,32 @@ Once all set up you can first publish an object (data)
 ```
 
 ## Exercise 2 {.exercise}
+This exercise will take you through how to do the submission process through R instead of the webform (exercise 1).
 
-If you are comfortable programming in R please complete this section of the exercise. If not please read through some of Jenny Bryan's materials [here](http://stat545.com/block002_hello-r-workspace-wd-project.html) (at least up to section 2.1), and then complete part 1 using excel or a different text editor of your choice. 
-    + While we prefer you use R (a scripted environment) to perform these tasks in your job, for the purposes of this training feel free to do it however you can if you are not confident data wrangling in R.
-    + If you need an R refresher, go over the <a href = 'http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html' target='_blank'>data carpentry guide.</a>
-    + You may also find the data carpentry <a href = 'http://www.datacarpentry.org/R-ecology-lesson/03-dplyr.html' target='_blank'>lesson on `dplyr`</a> and OHI's <a href = 'http://ohi-science.org/data-science-training/dplyr.html' target='_blank'>data wrangling chapters</a> helpful.
+### Part 1 - Gather your data files
+
+For our convenience, we will be grabbing the metadata and data files from the file we published earlier:
 
 * Locate the data package you published in [Exercise 1](#exercise-1) by navigating to the "My Profile > My Data" section on <a href = 'https://test.arcticdata.io' target='_blank'>test.arcticdata.io</a>.
 * Download the metadata and data files and transfer them to the Datateam server.
+
+### Part 2 - Working in R
+
+Now we want to publish the metadata and data files we downloaded again to `test.arcticdata.io`
+
 * Obtain a token and **please note** that for this exercise please make sure you grab the token from the <a href = 'https://test.arcticdata.io' target='_blank'> arcticdata test site</a>
-* Using the functions described in the section above, publish your metadata record and data file to the site. (When you do so, make sure you save the `PID`s to different variables in R...) i.e.
+* Publish your metadata and data file to the site.
 
 ``` {r, eval = FALSE, class.source = 'exercise'}
 data_pid <- publish_object(...)
 metadata_pid <- publish_object(...)
 ```
 
-* Then create a resource map containing your data and metadata.
-* View your new data set (which is identical to the one you created previously) by appending the metadata PID to the end of the URL test.arcticdata.io/#view/... 
+* Create a resource map to connect your data and metadata.
+```
+resource_map_pid <- create_resource_map(adc_test,
+                                        metadata_pid = metadata_pid,
+                                        data_pids = data_pids)
+```
+* View your new data set by appending the metadata PID to the end of the URL test.arcticdata.io/#view/... 
+* If you are successful it should look the same as the dataset you created in exercise 1
