--- a/training/06_editing_sysmeta.Rmd
+++ b/training/06_editing_sysmeta.Rmd
@@ -12,7 +12,12 @@ Although the majority of system metadata changes that need to be made are done a
 
 ## Exercise 5 {.exercise}
 
+Sometimes the system doesn't recognize the file types properly. For example you have a csv file but the File type on the website says `Microsoft Excel` 
+
 * Read the system metadata in from the data file you uploaded [previously](#exercise-4).
-* Check to make sure the `fileName` and `formatId` are set correctly.
+* Check to make sure the `fileName` and `formatId` are set correctly (the extension in `fileName` should match the `formatId`).
 * Update the system metadata if necessary.
+
+Finally make sure that the researcher has permission to edit and view the dataset. In this case use your own ORCiD.
+
 * Set the rights and access for all objects with your ORCiD.
