add clarification to account info

--- a/training/08_using_git.Rmd
+++ b/training/08_using_git.Rmd
@@ -36,7 +36,7 @@ You should see a prompt asking you for a URL. Fill it out as shown in the image 
 
 ![](images/clone_repo.jpeg)
 
-You will be prompted for your username and password, and then Git will clone the directory. The username/password you use should be the same one you use to log in when you go to http://github.nceas.ucsb.edu/KNB/arctic-data. Now you should have a directory called arctic-data in your RStudio files window.
+You will be prompted for your username and password, and then Git will clone the directory. The username/password you use should be the same one you use to log in when you go to RT or http://github.nceas.ucsb.edu/KNB/arctic-data. Now you should have a directory called arctic-data in your RStudio files window.
 
 ## Working with the repository
 
